# fukayatti0.dev

./: .eslintignore  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  FETCH_FREQUENCY_ANALYSIS.md  METADATA_TEMPLATE_USAGE.md  NOTION_CONTENT_SETUP.md  NOTION_SETUP.md  RECOMMENDED_SETUP.md  STORYBOOK.md  STORYBOOK_USAGE_GUIDE.md  eslint.config.mjs  next-sitemap.config.js  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: build-wasm.yml
.storybook/: main.ts
crates/portfolio-fx/: Cargo.toml
crates/portfolio-fx/src/: lib.rs  renderer.rs
crates/portfolio-fx/src/effects/: gradient_orb.rs  matrix_rain.rs  mod.rs  particles.rs  rgb_split.rs
crates/portfolio-fx/src/shaders/: gradient_orb.wgsl  matrix_compute.wgsl  matrix_render.wgsl  particles.wgsl  rgb_split.wgsl
logs/: .cb51a7491b10fd65004499ffa11c082df09c7a45-audit.json
public/: manifest.json  robots.txt  sitemap-0.xml  sitemap.xml
public/pkg/: package.json  portfolio_fx.d.ts  portfolio_fx.js  portfolio_fx_bg.wasm  portfolio_fx_bg.wasm.d.ts
src/app/: client-layout.tsx  code-block-theme.css  globals.css  icon.tsx  layout.tsx  metadata.ts  metadata.tsx  opengraph-image.tsx  page.tsx
src/components/: BackToTopButton.stories.tsx  Card.stories.tsx  Card.tsx  ClientLayout.tsx  CurrentFocusSection.stories.tsx  CurrentFocusSection.tsx  CurrentFocusStaticSection.tsx  CurrentFocusSummaryCard.stories.tsx  CurrentFocusSummaryCard.tsx  FooterContent.tsx  FooterSection.stories.tsx  FooterSection.tsx  Goals2025ProgressCard.stories.tsx  Goals2025Section.tsx  (+24 more)
(+77 files in other folders)
